# SessionTools

./: .gitignore  README.md  Untitled.ipynb  _setup.py  environment.yml  pyproject.toml  setup.cfg  setup.py
Notebooks/: DanglingFly.ipynb  R4d_EB_simultaneous_image.ipynb  Untitled.ipynb  bruker_example.ipynb  make_h5.ipynb  metadata_debugging.ipynb  motion_correction_debugging.ipynb  preprocess_debugging.ipynb  ring_linescan.ipynb  signal_extraction_debugging.ipynb  tiff_tools_debugging.ipynb
SessionTools/: utilities.py
SessionTools/SessionTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SessionTools/two_photon/: __init__.py  metadata.py  motion_correction.py  preprocessing.py  tiff_tools.py
SessionTools/two_photon/preprocessing_tools/: __init__.py  bruker_metadata.py  motion_correction.py  napari_tools.py  signals.py  tiff_tools.py
SessionTools/two_photon/preprocessing_tools/.ipynb_checkpoints/: tiff_tools-checkpoint.py
src/: __init__.py
src/SessionTools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/SessionTools/two_photon/: params.py
src/SessionTools/two_photon/preprocessing_tools/: motion_correction.py
src/session_tools/two_photon/preprocessing_tools/: motion_correction.py  signals.py  tiff_tools.py
src/two_photon/: __init__.py
src/two_photon/preprocessing_tools/: motion_correction.py  signals.py  tiff_tools.py
