# pyproject.toml

[project]
name = "SessionTools"
version = "0.0.1"
description = "Drosophila central complex imaging and behavior analysis"
authors = [{name = "Mark Plitt", email = "markplitt@gmail.com"}]
license = {text = "BSD"}
requires-python = ">=3.11"
dependencies = [
    "dask",
    "h5py",
    "numpy",
    "pandas",
    "tables",
    "scikit-image",
    "scipy",
    "tifffile",
    "yapf",
    "ipython",
    "jupyterlab",
    "matplotlib",
    "napari",
    "cloudpickle",
]

[project.urls]
Homepage = "https://github.com/yfisher-lab/SessionTools"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
